test/cases/bad/bad047.lat
// Not lvalue

int main() {
    0 = 42;
    return 0;
}
